--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -422,4 +422,7 @@
     <string name="logout">Logout</string>
     <string name="product">Products</string>
 
+    <string name="google_geo_api_key">YOUR KEYS</string>
+    <string name="fabric_api_key">YOUR KEYS</string>
+
 </resources>
