Update demo environment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_name">SmartPesa SmartPOS</string>
 
-    <string name="app_url" translatable="false">dev.smartpesa.com</string>
+    <string name="app_url" translatable="false">demo.smartpesa.com</string>
     <string name="version_endpoint" translatable="false">http://%1$s/version.txt</string>
 
     <!--Menu titles-->
@@ -432,8 +432,5 @@
 
     <string name="google_geo_api_key">YOUR_KEYS</string>
     <string name="fabric_api_key">YOUR_KEYS</string>
-
-    <string name="google_geo_api_key">YOUR KEYS</string>
-    <string name="fabric_api_key">YOUR KEYS</string>
 
 </resources>
